# soon

back/: README.md  go.mod  go.sum  pyproject.toml  run.sh
back/back/: main.py
back/back/controller/: user.py
back/back/core/: __init__.py  auth.py  common.py
back/back/db/: __init__.py  mongo.py
back/back/models/: __init__.py  feed.py  plant.py  post.py  schedule.py  user.py
back/back/repository/: db.py  user.py
back/back/routers/: __init__.py  community.py  feed.py  guest.py  plant.py  post.py  schedule.py  user.py
back/back/schema/: __init__.py  feed.py  plant.py  post.py  schedule.py  user.py
back/back/services/: feed.py  plant.py  post.py  schedule.py  user.py
back/docs/schema/: crate_table.sql
back/src/: main.go
back/src/auth/: auth.go
back/src/controller/: controller.go
back/src/repository/: user.go
back/src/service/: service.go  user.go
back_backup/src/controller/: user.go
back_backup/src/repository/: mysql.go
front/: README.md  app.json  package-lock.json  package.json  pubspec.yaml
front/app/: +html.tsx  _layout.tsx  index.tsx
front/components/: Avartar.tsx  Footer.tsx  Header.tsx  HelloWave.tsx  SoonText.tsx  ThemedText.tsx  Thumbnail.tsx  Todo.tsx
front/constants/: Colors.ts  Styles.ts
front/soon/: package-lock.json  package.json
front/test/: widget_test.dart
front/web/: index.html
front_backup/: .gitignore  README.md  pubspec.yaml
front_backup/lib/: main.dart
front_backup/linux/: CMakeLists.txt  my_application.cc
front_backup/web/: manifest.json
front_backup/windows/: CMakeLists.txt
(+33 files in other folders)
