[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["ming9908 <qwerty160326@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.115.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
